so far so good.  Got the new variant adapter working

--- a/app/src/main/res/layout/scan_barcode_overlay.xml
+++ b/app/src/main/res/layout/scan_barcode_overlay.xml
@@ -18,6 +18,13 @@
             android:id="@+id/RatingHolder"
             android:animateLayoutChanges="true">
         </app.subversive.groceryratings.UI.RatingsLayout>
+        <!-- -->
+        <!--<RecyclerView-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/RatingHolder"-->
+            <!--android:animateLayoutChanges="true"-->
+            <!--/>-->
 
     </app.subversive.groceryratings.UI.ObservableScrollView>
 </merge>
