--- a/app/src/main/res/layout/fragment_social_selector.xml
+++ b/app/src/main/res/layout/fragment_social_selector.xml
@@ -15,13 +15,24 @@
         android:layout_gravity="center"
         >
 
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Sign In With:"
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"
+            android:textSize="22sp"
+            android:textColor="#fff"
+            />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Facebook"
             android:id="@+id/btnFacebook"
             android:background="@drawable/facebook_btn_background_state"
-            android:layout_margin="4dp"
+            android:layout_margin="8dp"
             style="@style/SocialButton"/>
 
         <Button
@@ -30,7 +41,7 @@
             android:text="Twitter"
             android:id="@+id/btnTwitter"
             android:background="@drawable/twitter_btn_background_state"
-            android:layout_margin="4dp"
+            android:layout_margin="8dp"
             style="@style/SocialButton"/>
 
         <Button
@@ -39,7 +50,8 @@
             android:text="Google"
             android:id="@+id/btnGoogle"
             android:background="@drawable/google_btn_background_state"
-            android:layout_margin="4dp"
+            android:layout_margin="8dp"
             style="@style/SocialButton"/>
     </LinearLayout>
+
 </FrameLayout>
