--- a/app/src/main/res/layout/fragment_social_selector.xml
+++ b/app/src/main/res/layout/fragment_social_selector.xml
@@ -2,8 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="app.subversive.groceryratings.SocialSelectorFragment"
-    android:layout_width="20dp"
-    android:layout_height="20dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:id="@+id/social_background"
     android:orientation="vertical"
     android:background="#0000"
