--- a/app/src/main/res/drawable/facebook_btn_background_state.xml
+++ b/app/src/main/res/drawable/facebook_btn_background_state.xml
@@ -5,5 +5,8 @@
         android:state_pressed="true"
         android:drawable="@drawable/facebook_btn_background_selected"/>
     <item
+        android:state_selected="true"
+        android:drawable="@drawable/facebook_btn_background_selected"/>
+    <item
         android:drawable="@drawable/facebook_btn_background_default"/>
 </selector>
