--- a/app/src/main/res/layout/review_item.xml
+++ b/app/src/main/res/layout/review_item.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+    android:background="@drawable/item_selector">
 
     <ImageView
         android:layout_width="64dp"
