--- a/app/src/main/res/layout/unknown_barcode.xml
+++ b/app/src/main/res/layout/unknown_barcode.xml
@@ -35,7 +35,9 @@
             android:textColor="#ffffffff"
             android:drawableLeft="@drawable/ic_action_cancel"
             android:id="@+id/tvNoScanBarcode"
-            style="?android:borderlessButtonStyle"
+            android:background="@drawable/overlay_selected"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             />
 
         <Button
@@ -45,7 +47,9 @@
             android:text="Yes"
             android:drawableLeft="@drawable/ic_action_accept"
             android:id="@+id/tvYesScanBarcode"
-            style="?android:borderlessButtonStyle"
+            android:background="@drawable/overlay_selected"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             android:layout_marginRight="16dp"
             />
 
