--- a/app/src/main/res/drawable/item_selector.xml
+++ b/app/src/main/res/drawable/item_selector.xml
@@ -3,9 +3,9 @@
     <item
         android:drawable="@color/selectedBackground"
         android:state_pressed="true" />
-    <item
-        android:drawable="@color/selectedBackground"
-        android:state_focused="true" />
+    <!--<item-->
+        <!--android:drawable="@color/selectedBackground"-->
+        <!--android:state_focused="true" />-->
     <item
         android:drawable="@color/transparent"/>
 
