--- a/app/src/main/res/drawable/overlay_selected.xml
+++ b/app/src/main/res/drawable/overlay_selected.xml
@@ -4,9 +4,9 @@
         android:drawable="@color/blackOverlayFlash"
         android:state_pressed="true"
         />
-    <item
-        android:drawable="@color/blackOverlayFlash"
-        android:state_selected="true" />
+    <!--<item-->
+        <!--android:drawable="@color/blackOverlayFlash"-->
+        <!--android:state_selected="true" />-->
     <item
         android:drawable="@color/transparent" />
 </selector>
