--- a/app/src/main/res/layout/fragment_product_review.xml
+++ b/app/src/main/res/layout/fragment_product_review.xml
@@ -13,19 +13,94 @@
         custom:ringWidth="3dp"
         custom:editable="true"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="2dp"
         android:id="@+id/ratingRater"/>
 
-    <EditText
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Select Your Rating"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        style="@style/Spacer"/>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:inputType="textMultiLine"
-        android:ems="10"
-        android:id="@+id/etRating"
         android:layout_weight="1"
-        android:hint="Select a rating above.\nAdd your review here."
-        android:gravity="center|top"
-        />
+        android:id="@+id/scrollView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <app.subversive.groceryratings.UI.SequentialLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ReviewSequentialLayout"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                custom:justifiedSpacing="false"
+                custom:minimumHorizontalPadding="8dp"
+                custom:verticalPadding="8dp">
+
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/flAddTag">
+
+                    <AutoCompleteTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="36dp"
+                        android:layout_gravity="start"
+                        android:hint="Add TasteTags"
+                        android:id="@+id/newTasteTags"
+                        android:singleLine="true"
+                        android:maxLength="20"
+                        android:gravity="center_vertical"
+                        android:completionThreshold="1"
+                        android:background="@color/transparent"/>
+
+                    <View
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:background="#0ff"
+                        android:layout_gravity="end"
+                        android:id="@+id/btnTagHelp"/>
+                </FrameLayout>
+
+            </app.subversive.groceryratings.UI.SequentialLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                style="@style/Spacer"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/etRating"
+                android:hint="Add your review"
+                android:gravity="top"
+                android:minLines="4"
+                android:layout_margin="8dp"
+                android:background="@color/transparent"
+            />
+        </LinearLayout>
+    </ScrollView>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        style="@style/Spacer"/>
 
     <Button
         android:layout_width="fill_parent"
