--- a/app/src/main/res/layout/taste_tag.xml
+++ b/app/src/main/res/layout/taste_tag.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="100%"
         android:id="@+id/tvPercent"
         android:padding="4dp"
-        android:background="#ff6ebc89"
+        android:gravity="center"
+        android:background="@color/TagSecondary"
         android:textColor="#fff"/>
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Salty"
         android:id="@+id/tvTagName"
-        android:layout_gravity="center_horizontal"
         android:padding="4dp"
-        android:background="#ff41bc5b"
-        android:textColor="#fff"/>
-</merge>
+        android:background="@color/TagPrimary"
+        android:textColor="#fff"
+        android:gravity="center"/>
+
+    <ImageButton
+        android:layout_height="36dp"
+        android:layout_width="36dp"
+        android:src="@drawable/ic_action_cancel"
+        android:background="@color/TagSecondary"
+        android:id="@+id/tagCancel"
+        android:visibility="gone"
+        tools:visibility="visible"/>
+
+</LinearLayout>
