--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,9 +14,11 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <!--<style name="CustomDialog" parent="Base.Theme.AppCompat.Dialog">-->
-        <!--<item name="android:background">#00ffffff</item>-->
-        <!--<item name="android:windowIsTranslucent">true</item>-->
-    <!--</style>-->
-
+    <style name="Spacer" parent="AppTheme">
+        <item name="android:background">#999</item>
+        <item name="android:layout_marginTop">4dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
+        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">8dp</item>
+    </style>
 </resources>
