--- a/app/src/main/res/layout/tutorial_overlay.xml
+++ b/app/src/main/res/layout/tutorial_overlay.xml
@@ -12,8 +12,9 @@
     >
     <View
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
-    />
+        android:layout_weight=".6"
+        android:layout_height="0dp"/>
+        <!--android:layout_height="50dp"-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -43,7 +44,9 @@
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="0dp"
+        android:layout_weight=".6"/>
+
 
     <View
         android:layout_width="fill_parent"
@@ -58,7 +61,9 @@
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="50dp"/>
+        android:layout_height="0dp"
+        android:layout_weight=".6"/>
+
 
     <TextView
         android:drawableTop="@drawable/phone_barcode"
