checking in latest work.  Pretty much ready to ship.  Just need to remove debug mode

--- a/app/src/main/res/layout/fragment_product_review.xml
+++ b/app/src/main/res/layout/fragment_product_review.xml
@@ -75,7 +75,7 @@
                 <Button
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:background="@drawable/help_circle"
+                    android:background="@drawable/help_list"
                     android:layout_gravity="end|center"
                     android:id="@+id/btnTagHelp"
                     android:text="\?"
