--- a/app/src/main/res/layout/taste_tag.xml
+++ b/app/src/main/res/layout/taste_tag.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal" android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
@@ -36,4 +37,4 @@
         android:visibility="gone"
         tools:visibility="visible"/>
 
-</LinearLayout>
+</merge>
