--- a/app/src/main/res/layout/tutorial_overlay.xml
+++ b/app/src/main/res/layout/tutorial_overlay.xml
@@ -14,7 +14,6 @@
         android:layout_width="fill_parent"
         android:layout_weight="1"
         android:layout_height="0dp"/>
-        <!--android:layout_height="50dp"-->
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,12 +48,10 @@
 
 
     <View
-        android:layout_width="fill_parent"
+        android:layout_width="200dp"
         android:layout_height="2dp"
         android:id="@+id/tutorialDivder"
         android:background="#ffffff"
-        android:layout_marginLeft="84dp"
-        android:layout_marginRight="84dp"
         android:visibility="invisible"
         tools:visibility="visible"
         />
@@ -67,11 +64,11 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5">
+        android:layout_weight="8">
     <TextView
         android:drawableTop="@drawable/phone_barcode"
         android:drawablePadding="16dp"
-        android:layout_width="wrap_content"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center"
         android:text="@string/tutorial1"
@@ -79,8 +76,6 @@
         android:id="@+id/tvTutorial"
         style="@style/TutorialFont"
         android:textSize="20sp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginRight="48dp"
         android:visibility="invisible"
         tools:visibility="visible"
         />
