--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="selectedBackground">#bbb</color>
     <color name="TagPrimary">#41bc5b</color>
     <color name="TagSecondary">#6cd97e</color>
+    <color name="TagPrimarySelected">#ff19a62e</color>
+    <color name="TagSecondarySelected">#ff3cc751</color>
     <color name="InvalidTagPrimary">#ffb87c40</color>
     <color name="InvalidTagSecondary">#ffd9a36c</color>
 
